[package]
name = "rbdc-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) Server for RBDC - Execute SQL queries and modifications"
authors = ["rbdc team"]
license = "Apache-2.0"
categories = ["database", "web-programming"]
keywords = ["database", "mcp", "sql", "server", "rbdc"]

[[bin]]
name = "rbdc-mcp-server"
path = "src/main.rs"


[dependencies]
# 使用社区版rust-mcp-sdk
rust-mcp-sdk = {version = "0.4.5", default-features = false, features = ["server", "macros", "2025_03_26"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
rbs = { version = "4.6" }

# RBDC dependencies
rbdc = { version = "4.6.0" }
rbdc-sqlite = { version = "4.6.0" }
rbdc-mysql = { version = "4.6.0" }
rbdc-pg = { version = "4.6.0" }
rbdc-mssql = { version = "4.6.0" }
rbdc-pool-fast = { version = "4.6.0" }






