[package]
name = "rbdc-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) Server for RBDC - Execute SQL queries and modifications"
authors = ["rbdc team"]
license = "Apache-2.0"
repository = "https://github.com/rbatis/rbdc-mcp"
homepage = "https://github.com/rbatis/rbdc-mcp"
categories = ["database", "web-programming"]
keywords = ["database", "mcp", "sql", "server", "rbdc"]

[[bin]]
name = "rbdc-mcp"
path = "src/main.rs"


[dependencies]

rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" ,features = [
    "server",
    "transport-io"
]}

anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
rbs = { version = "4.6" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }

# RBDC dependencies
rbdc = { version = "4.6.0" }
rbdc-sqlite = { version = "4.6.0" }
rbdc-mysql = { version = "4.6.0" }
rbdc-pg = { version = "4.6.0" }
rbdc-mssql = { version = "4.6.0" }
rbdc-pool-fast = { version = "4.6.0" }






